logs/turtlesim/build.make.005.log.stderr
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp: In member function ‘bool turtlesim::Turtle::update(double, QPainter&, const QImage&, qreal, qreal)’:
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp:165:36: error: ‘lin_vel’ was not declared in this scope
   pos_.ry() += std::cos(orient_) * lin_vel;
                                    ^~~~~~~
/home/alfredo/turtlesim/src/ros_tutorials/turtlesim/src/turtle.cpp:165:36: note: suggested alternative: ‘lin_vel_’
   pos_.ry() += std::cos(orient_) * lin_vel;
                                    ^~~~~~~
                                    lin_vel_
make[2]: *** [CMakeFiles/turtlesim_node.dir/src/turtle.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
make[1]: *** [CMakeFiles/turtlesim_node.dir/all] Error 2
make: *** [all] Error 2
